--- a/githubworkflow/service.yaml
+++ b/githubworkflow/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: primuslearning
+  name: hpaservice
+  namespace: demo-ns
 spec:
-  selector:
-    app: primuslearning
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 8080
   type: LoadBalancer
+  selector:
+    name: hpapod
+  ports:
+  - port: 80
+    targetPort: 8080
